@@ -16,15 +16,52 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
+/*
+ * This file describes local_irq/flags_xxx APIs.
+ */
+
 #ifndef _SANDIX_IRQFLAGS_H_
 #define _SANDIX_IRQFLAGS_H_
 
 #include <asm/irqflags.h>
+#include <sandix/typecheck.h>
 
-/*TODO*/
-#define local_irq_disable()
-#define local_irq_enable()
-#define local_irq_save(flags)		do { flags = 0; } while (0)
-#define local_irq_restore(flags)
+static __always_inline void local_irq_enable(void)
+{
+	arch_local_irq_enable();
+}
+
+static inline void local_irq_disable(void)
+{
+	arch_local_irq_disable();
+}
+
+static inline void safe_halt(void)
+{
+	arch_safe_halt();
+}
+
+static inline void halt(void)
+{
+	arch_halt();
+}
+
+#define local_irq_save(flags)				\
+	do {						\
+		typecheck(unsigned long, flags);	\
+		flags = arch_local_irq_save();		\
+	} while (0)
+
+#define local_irq_restore(flags)			\
+	do {						\
+		typecheck(unsigned long, flags);	\
+		arch_local_irq_restore(flags);		\
+	} while (0)
+
+#define local_save_flags(flags)				\
+	do {						\
+		typecheck(unsigned long, flags);	\
+		flags = arch_local_save_flags();	\
+	} while (0)
 
 #endif /* _SANDIX_IRQFLAGS_H_ */
